[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["CalebAMcCarthy"]
edition = "2018"

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9.10"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]